Week 10 & TAGS up

--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -49,8 +49,6 @@
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
-
-      
       The Hessian map is the rational map associating to each homogeneous polynomial in <i>r</i>+1 variables its
       Hessian, which is the determinant of its Hessian matrix.
       Gordan and Noether proved in 1876 that the Hessian map is not defined exactly on cones for
@@ -59,7 +57,6 @@
       of view.
       An interesting open problem is if the Hessian map is birational on its image.
       We discuss this problem and we expose some results obtained jointly with Ciliberto. 
-
     <br> <br>
     </td>
   </tr>
@@ -80,7 +77,6 @@ not equal to <i>p</i> for hyperelliptic curves.  We will also explore
 examples of how this work extends the reach of quadratic Chabauty to
 curves previously deemed inaccessible.  This is joint work with
 Alexander Betts, Sachi Hashimoto, and Pim Spelier.
-
     <br> <br>
     </td>
   </tr>
@@ -118,7 +114,7 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td><font size=+1> Hannah Larson</font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2> Cohomology of moduli spaces of curves</font></td>
+    <td><font size=+1 color=Purple colspan=2>Cohomology of moduli spaces of curves</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
@@ -137,10 +133,68 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
       In this talk, I will ask the question: which cohomology groups <i>H<sup>k</sup></i>(<i>M</i><sub><i>g</i>,<i>n</i></sub>-bar) are
       tautological? And when they are not, how can we better understand them?
       This is joint work with Samir Canning and Sam Payne.
-      
     <br> <br>
     </td>
   </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><font size=+1>David Eisenbud</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Looking inside infinite resolutions</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+      Hand computation of even a few steps in an infinite minimal resolution is very slow, but with systems such as Macaulay2 one can make many
+      experiments leading to observations that I find surprising.
+      Some have become theorems, others are quite mysterious.
+      In this talk I'll describe some of the new phenomena that I and others have seen, and some of the guesses (conjectures?) that we have
+      made.
+      The new results are part of joint work with Hai Long Dao, Bernd Ulrich, Claudia Polini and others.   <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><font size=+1>Maria Fox</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Ekedahl-Oort and Newton Stratifications</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+     We will discuss two important invariants of abelian varieties in characteristic <i>p</i>: the <i>p</i>-torsion subgroup and
+     the <i>p</i>-divisible group.
+     Given a moduli space &Mscr; of abelian varieties in characteristic <i>p</i>, these two invariants can each be used to create a
+     stratification of &Mscr;.
+     We will see in several concrete examples that these two stratifications are very different, reflecting the fact that these two invariants
+     capture very different attributes of the abelian varieties.
+     The new result in this talk is joint with D. Bhamidipati, H. Goodson, S. Groen, S. Nair, and E. Stacy. 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><font size=+1>Alicia Lamarche </font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>Wonderful compactifications, toric varieties, and derived categories</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+
+      Given a complex Lie group <i>G</i> of adjoint type, the wonderful compactification <i>Y</i>(<i>G</i>)
+      (originally described by work of DeConcini-Procesi)  is a compactification of <i>G</i> by a divisor with simple normal crossings.
+      These groups are specified by their Dynkin diagrams and corresponding root systems, from which one can construct a toric variety
+      <i>X</i>(<i>G</i>).
+      In this talk, we will discuss ongoing work with Aaron Bertram that aims to succinctly describe the derived category of coherent
+      sheaves of <i>Y</i>(<i>G</i>) and <i>X</i>(<i>G</i>). 
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
@@ -156,22 +210,6 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
     <br> <br>
     </td>
   </tr>
-  <!---------------------------------------------------------------------------------------------------->
-  <!----------------------    The next two rows are for one entry    ----------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
-  <tr>
-    <td><font size=+1></font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2></font></td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------->
-  <tr>
-    <td colspan=2>  </td><td width=800 colspan=3>
-
-
-    <br> <br>
-    </td>
-  </tr>
-  <!---------------------------------------------------------------------------------------------------->
 
 
 
