--- a/index.html
+++ b/index.html
@@ -149,17 +149,36 @@
    <!-------------------------------------------------------------------------------->
    <!---------------------     Put teaching information here   ---------------------->
    <!-------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Spring  2024</font></b>
    <table>
-     <!-------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------------------->
     <tr><td><font color=brown>MATH 629</font></td>
       <td><a href="teaching/24.1/629.html">History of Mathematics</a> &nbsp; </td>
       <td align=leftt>This is a distance course.</td>
      </tr>
   </table>
- <!------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <hr>
+  <!---------------------------------------------------------------------------------------------------->
+   <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
+   <table>
+    <!---------------------------------------------------------------------------------------------------->
+    <tr><td><font color=brown>MATH 300</font></td>
+      <td><a href="teaching/24.2/300.html"></a>Foundations of Mathematics</td>
+      <td align=left>.</td>
+    </tr>
+    <!---------------------------------------------------------------------------------------------------->
+    <tr><td><font color=brown>MATH 666</font></td>
+      <td><a href="teaching/24.2/Toric.html"></a>Toric Varieties</td>
+      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a>.</td>
+    </tr>
+    <!---------------------------------------------------------------------------------------------------->
+  </table>
+ <!---------------------------------------------------------------------------------------------------->
  <!----------  News and anouncements  --------------------------------------------->
    <hr>
  <!------------------------------------------------------------------------------->
@@ -372,7 +391,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Feb 05 05:49:20 GMT 2024 by sottile</p>  
+<p>Last modified: Mon Mar 18 13:46:38 PDT 2024 by sottile</p>  
  </body>
 </html> 
 
