--- a/teaching/24.1/weeks/W09.html
+++ b/teaching/24.1/weeks/W09.html
@@ -11,16 +11,17 @@
 <HR>
 <!--------------------------------------------------------->
 <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.<br>
-<!-------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <HR>
-<!-------------------------------------------------------------->
-You do need to be working on your  <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>.
+<!---------------------------------------------------------------------------------------------------->
+You do need to be working on your  <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>;
+It is due on March 20.
   <br>
   You will note that the rolling break due to spring breaks continues; the exercises should be a little lighter again this week.
   <br>
-<!-------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <HR>
-<!-------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
 <font color=maroon><h3>Week 9: 12 March 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font><br>
@@ -103,7 +104,7 @@ mathematics in the 18th century.
 <address></address>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sat Mar 14 12:53:30 CDT 2020  --><!-- hhmts end -->
-<p>Last modified: Mon Mar 11 13:21:44 PDT 2024 by sottile</p>
+<p>Last modified: Mon Mar 18 08:18:34 PDT 2024 by sottile</p>
 
 </body> </html>
 
