fixed broken link

--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -199,14 +199,19 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td><font size=+1></font></td><td>&nbsp;</td>
-    <td><font size=+1 color=Purple colspan=2></font></td>
+    <td><font size=+1>Chiara Damiolini</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>A gentle introduction to Conformal Blocks</font></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td colspan=2>  </td><td width=800 colspan=3>
 
-
+Spaces of conformal blocks are naturally constructed starting from a geometric datum (a projective curve with some marked point) and a
+representation-theoretic input (a vertex algebra <i>V</i> and some <i>V</i>-modules).
+Varying the geometric data, these conformal blocks define sheaves on the moduli space of curves which satisfy particularly nice
+combinatorial and functorial properties.
+In tonight's talk I will give a gentle introduction to these objects.
+No prior knowledge of vertex algebras or moduli of curves will be required.
     <br> <br>
     </td>
   </tr>
