--- a/talks.html
+++ b/talks.html
@@ -148,8 +148,8 @@
    <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
-    Colloquium, Georgia Tech, 28 March 2024.   <!--  <a href="talks/24/WWSigns.txt"></a>abstract.-->
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
+    Colloquium, Georgia Tech, 28 March 2024.  <a href="talks/24/Golden.txt">Abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
@@ -631,7 +631,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Fri Mar 15 09:43:26 PDT 2024 by sottile</p>  
+<p>Last modified: Mon Mar 18 14:33:20 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
