--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -77,7 +77,7 @@ Frank cancelled his attendance on 11 February 2024
 <!----------------------------------------------------------------------------------------------------->
 <b><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMhzQd98pwn7irgiobTw0N9eSFMovc9oXRZ7ijFKPrMztfDw/viewform">Registration</a></b><br>
 
-<b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
+<b><a href="posters.html">Poster Session</a>:  </b> There will be a poster session for participants,
      with a prize for the best poster by a student or postdoc.<br>
 
 <b>Funding:</b> Conference attendance is supported by NSF grant DMS-2349244.
