--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -22,8 +22,8 @@ Information for
 <!--    Next time, when there is no coronavirus, you may need to add a week 15. 
   <a href="weeks/W14.html">Week &Omega;</a>  &nbsp;
   <a href="weeks/W13.html">Week 13</a>  &nbsp;
-  <a href="weeks/W12.html">Week 12</a>  &nbsp;     
-  <a href="weeks/W11.html">Week 11</a>  &nbsp; --> 
+  <a href="weeks/W12.html">Week 12</a>  &nbsp;   -->    
+  <a href="weeks/W11.html">Week 11</a>  &nbsp;
   <a href="weeks/W10.html">Week 10</a>  &nbsp; 
   <a href="weeks/W09.html">Week 9</a>  &nbsp;
   <a href="weeks/W08.html">Week 8</a>  &nbsp;
@@ -220,19 +220,18 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="Term_paper.html">Term Paper</a>  &nbsp;   <font color=880000>End of April</font>
+      <a href="Term_Paper.html">Term Paper</a>  &nbsp;   <font color=880000>April 30</font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 200 </td>
   </tr>
 </table>
 
 <font size=+1 color=880000>Short paper</font>
-The first paper will be a <a href="HOM.html"></a>reflection on your experience on the history of mathematics, this is a new aassignment for
-me, and I am still formulating the prompts and a more careful descrition.
+The first paper will be a <a href="ReflectionsOnHistoryOfMathematics.html">reflection on your experience on the history of mathematics</a>.
  You will submit it both to turnitin.com as well as send me a .pdf.
  I will mark it for writing quality, both form and content. 
 <br>
-<font size=+1 color=880000><a href="Term_paper.html"></a>Term Paper:</font>
+<font size=+1 color=880000><a href="Term_Paper.html">Term Paper</a>:</font>
 This should be significantly longer (around 2000 words), so that you can properly develop your topic.
 This will include a round of peer-review and some preliminary steps, and a short presentation/discussion with me on its contents and what
 you learned from it.
@@ -275,7 +274,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Fri Mar 22 08:06:06 PDT 2024 by sottile</p>
+<p>Last modified: Mon Mar 25 23:02:49 EDT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
