--- a/teaching/24.1/weeks/W11.html
+++ b/teaching/24.1/weeks/W11.html
@@ -10,22 +10,22 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-Information  on your <a href="../Term_paper.html">term paper</a>.
-Due Monday 4 May 2022.
+Information  on your <a href="../Term_Paper.html">term paper</a>.
+Due Tuesday 30 April 2024.
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
 
-<font color=maroon><h3>Week 11: 2 April 2022. </h3></font>
+<font color=maroon><h3>Week 11: 26 March 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
 
-  We will begin with a couple of topics from Chapter 17 (which we only read before).<br><br>
+  We will begin with a couple of topics from Chapter 17.<br><br>
   
   &nbsp; &nbsp;
   The feature this week is the story of non-Euclidean Geometry.
@@ -80,8 +80,10 @@ Due Monday 4 May 2022.
   </ol>
  </li><br>
 
- <li><font color=maroon><b>Assignment:</b></font> Due <font color=magenta>Monday, 11 April 2022</font>, (HW 11)<br>
+ <li><font color=maroon><b>Assignment:</b></font> Due <font color=magenta>Monday, 1 April 2025</font>, (HW 11)<br>
    Here is a <a href="../HW/HW11.pdf">.pdf</a> and a  <a href="../HW/HW11.tex">LaTeX source</a> of the assignment.<br>
+   Note that there is no concept quiz and no group portion of the assignment.
+   The construction of the hyperbolic soccerball obviates that.<br>
    <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
  <ol>
    <!------------------------------------------------------------------------>
@@ -94,7 +96,7 @@ Due Monday 4 May 2022.
     <li>
     Please do exercises in Section 17.<font color=red>6</font> (there are typos here), numbers 17.7.1 and 17.7.2.
     Here, excess means in excess of the angle sum of a polygon.
-    <font color=magenta>Having done that, u</font>se the idea of 17.7.2 to deduce that the
+    <font color=magenta></font>Having done that, use the idea of 17.7.2 to deduce that the
     angle sum of a polygon in the Euclidean plane with <i>n</i> sides is &pi;(<i>n</i>-2). 
     Along the same line of spherical geometry, do problem 18.2.1.
   </li>
@@ -102,8 +104,8 @@ Due Monday 4 May 2022.
     For the first, use that <i>dy</i>/<i>dx</i>= (<i>dy</i>/<i>d&sigma;</i>)/(<i>dx</i>/<i>d&sigma;</i>).
   </li> -->
   <li>
-     Look up Gau&szlig; on the web and write about one mathematical accomplishment of his that is <font color=red><i>not</i></font> explained in either
-   book, or only explained in passing.  This should be brief; such as a paragraph.
+     Look up Gau&szlig; on the web and write about one mathematical accomplishment of his that is <font color=red><i>not</i></font>
+   explained in either  book, or only explained in passing.  This should be brief; such as only one paragraph.
   </li>
  <li>
    The main part of your homework is to build the hyperbolic soccer ball, and then do the activity I describe below for it.
@@ -193,10 +195,10 @@ Due Monday 4 May 2022.
   If you have a protractor, you can get the angle measures as follows.
   Lay your semi-circle on a blank sheet of paper, marking the centre point, as well as the
   four points (starting point and points where the edges leave the semi-circle) along the semi-circle that you measured.
-  Placing your semi-circle on one of the (images of) proctractors that I sent, or on a sheet of paper if you have your favourite protractor, extend
-  these to get four rays, and record the sum of the angles that you measured.
-  (If you measure the angles individually and then sum them, versus just marking their sum on your semicircle and then measuring it, you will be less
-  accurate.
+  Placing your semi-circle on one of the (images of) proctractors that I sent, or on a sheet of paper if you have your favourite protractor,
+  extend these to get four rays, and record the sum of the angles that you measured.
+  (If you measure the angles individually and then sum them, versus just marking their sum on your semicircle and then measuring it, you
+  will be less accurate.
   Measuring thrice and summing the numbers gives an error of about 1.7 (&sim;3<sup>1/2</sup>)  times the error of making one measurement.
   </li>
 
@@ -217,7 +219,7 @@ Due Monday 4 May 2022.
        <li><font color=red>To Hand in:</font>
 	 First, write a couple of paragraphs (be brief) describing what you did with lines on your hyperbolic soccerball.
 	 Second, another couple of paragraphs about what you learned from this activity.<br>
-	 These are part of the homework to post to Grsadescope.<br><br>
+	 These are part of the homework to post to Gradescope.<br><br>
 	 The last part, which you share a picture or two on Piazza of your constructions; possibly both sides,
 	 and second, report on your triangles, say in a group post on Piazza (I think that you can edit the
 	 posts of others) information such as  First triangle 143 degrees and four
@@ -250,7 +252,7 @@ pageTracker._trackPageview();
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Mar 29 15:12:19 CDT 2020  --><!-- hhmts end -->
 
-<p>Last modified: Thu Mar 24 07:29:11 CDT 2022 by sottile</p>
+<p>Last modified: Mon Mar 25 23:17:28 EDT 2024 by sottile</p>
 
 </body> </html>
 
