--- a/teaching/24.1/Term_Paper.html
+++ b/teaching/24.1/Term_Paper.html
@@ -17,7 +17,7 @@ students have already chosen for our class.
 <!---------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------->
-<font color=maroon><h2>The term paper (due end of April)</h2></font>
+<font color=maroon><h2>The term paper (due April 30)</h2></font>
 
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
   and submit this to turnitin.com.<br>
@@ -167,7 +167,7 @@ These are included not to delineate what you will write about, but to stimulate 
 </ul>
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Fri Mar 15 10:24:57 PDT 2024 by sottile</p>  
+<p>Last modified: Mon Mar 25 23:03:24 EDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 
 </body> </html>
