--- a/conferences/TAGS24/posters.html
+++ b/conferences/TAGS24/posters.html
@@ -58,18 +58,38 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
-  <tr>    <td><font size=+1></font></td><td><A HREF="#">abstract</A></td>
+  <tr>    <td><font size=+1>Filip Rupniewski</font></td><td><A HREF="#FR">abstract</A></td>
+    <td>Generic border subrank is bigger than generic subrank for large tensors</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Yeqiu Wang</font></td><td><A HREF="#YW">abstract</A></td>
+    <td>TBA</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>C.J. Bott</font></td><td><A HREF="#CJ">abstract</A></td>
+    <td>Galois groups of Enumerative Problems</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Jonah Robinson</font></td><td><A HREF="#JR">abstract</A></td>
     <td></td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
-</table>
+  <tr>    <td><font size=+1></font></td><td><A HREF="#">abstract</A></td>
+    <td></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------------------------->
+</table>Yeqiu Wang 
 <!------------------------------------------------------------------------------------------------------------------------>
 <h3><font color=Maroon>Abstracts</font></h3>
 <!------------------------------------------------------------------------------------------------------------------------>
   <table  border=1>
   <!---------------------------------------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
     <td><A NAME=""><font size=+1></font></td><td>&nbsp;</td>
     <td></td>
@@ -79,14 +99,62 @@
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="JR"><font size=+1>Jonah Robinson</font></td><td>&nbsp;</td>
+    <td></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="CJ">C.J. Bott<font size=+1></font></td><td>&nbsp;</td>
+    <td>Galois groups of Enumerative Problems</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="YW"><font size=+1>Yeqiu Wang</font></td><td>&nbsp;</td>
+    <td>TBA</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="GFR"><font size=+1>Filip Rupniewski</font></td><td>&nbsp;</td>
+    <td>Generic border subrank is bigger than generic subrank for large tensors</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
     <td><A NAME="GLC"><font size=+1>Gari Lincoln Chua</font></td><td>&nbsp;</td>
     <td>On Stability and Denominators of <i>F</i>-pure Thresholds in Families of Diagonal Hypersurfaces</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
-   </td>
+   The <i>F</i>-pure threshold of a polynomial <i>f</i> of characteristic <i>p</i>&gt; 0 is an invariant of the singularities of <i>f</i>,
+   with smaller values corresponding to worse singularities.
+      In many cases, the  <i>F</i>-pure threshold is a rational number, and questions about the denominator of the <i>F</i>-pure threshold
+   have been asked.
+      In this poster, we investigate a family of polynomials whose <i>F</i>-pure thresholds stabilize for some primes and whose prime power
+      in the denominators is unbounded.
+      In particular, given any prime <i>p</i>, we can find a family of polynomials such that their <i>F</i>-pure thresholds are powers
+      of <i>p</i>, with no uniform bound on the power appearing in the denominator.
+    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
