--- a/teaching/24.1/weeks/W11.html
+++ b/teaching/24.1/weeks/W11.html
@@ -1,4 +1,4 @@
-<HTML><HEAD><TITLE>Week 11, Math 629</TITLE></HEAD>
+HTML><HEAD><TITLE>Week 11, Math 629</TITLE></HEAD>
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
 <!-------------------------------------------------------------->
@@ -208,7 +208,8 @@ Due Tuesday 30 April 2024.
   For each triangle, count the number of vertices in the interior of the triangle.
   <font color=red>Please send to me your triangle data:  For each triangle, its number of internal vertices and angle sum as a pair
     [number of vertices, angle sum], e.g. [1,172],[6,135],[12,80].
-  I will plot that and share it with you.</font>
+  I will plot that and share it with you.
+  This will illustrate a discrete version of the Gauss-Bonnet formula.</font>
   </li>
 
 
@@ -252,7 +253,7 @@ pageTracker._trackPageview();
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Mar 29 15:12:19 CDT 2020  --><!-- hhmts end -->
 
-<p>Last modified: Mon Mar 25 23:17:28 EDT 2024 by sottile</p>
+<p>Last modified: Tue Mar 26 09:54:09 PDT 2024 by sottile</p>
 
 </body> </html>
 
