--- a/conferences/TAGS24/posters.html
+++ b/conferences/TAGS24/posters.html
@@ -74,7 +74,16 @@
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>    <td><font size=+1>Jonah Robinson</font></td><td><A HREF="#JR">abstract</A></td>
-    <td></td>
+    <td>Invariants of the Dispersion Relation for Discrete Periodic Operators</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Logan White</font></td><td><A HREF="#LW">abstract</A></td>
+    <td>Mirror Symmetry for Berkovich Spaces</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>    <td><font size=+1>Michail Savvas</font></td><td><A HREF="#MS">abstract</A></td>
+    <td>Moduli spaces in derived geometry</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
@@ -83,7 +92,10 @@
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------------------------->
-</table>Yeqiu Wang 
+</table>
+<!------------------------------------------------------------------------------------------------------------------------>
+
+
 <!------------------------------------------------------------------------------------------------------------------------>
 <h3><font color=Maroon>Abstracts</font></h3>
 <!------------------------------------------------------------------------------------------------------------------------>
@@ -101,11 +113,49 @@
   <!---------------------------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
-    <td><A NAME="JR"><font size=+1>Jonah Robinson</font></td><td>&nbsp;</td>
-    <td></td>
+    <td><A NAME="MS">Michail Savvas<font size=+1></font></td><td>&nbsp;</td>
+    <td>Moduli spaces in derived geometry</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
+      Constructing moduli spaces has been a fundamental endeavor within algebraic geometry (and beyond), motivating, among
+      other things, the development of Geometric Invariant Theory in the 1960s and the more general theory of good moduli
+      spaces in the 2000s.
+      This poster presents how the theory extends to the setting of derived algebraic geometry, leading to natural derived
+      enhancements of constructions and structural results for classical moduli spaces.
+      It is based on joint work with Eric Ahlqvist, Jeroen Hekking, and Michele Pernice. 
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="LW">Logan White<font size=+1></font></td><td>&nbsp;</td>
+    <td>Mirror Symmetry for Berkovich Spaces</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+      In joint work with Sean Keel and Tony Yue Yu, we construct mirror families to snc partial compactifications of nonarchimedean analytic
+      spaces which satisfy certain convexity and log Calabi-Yau type conditions.
+      Our construction greatly expands the range of the Keel-Yu mirror program, with one important application being the mirror to a formal
+      deformation.  
+   </td>
+   </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><A NAME="JR"><font size=+1>Jonah Robinson</font></td><td>&nbsp;</td>
+    <td>Invariants of the Dispersion Relation for Discrete Periodic Operators</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------------------------->
+  <tr><td colspan=3> <b>Abstract:</b>
+      We utilize tools of computational algebraic geometry to study the dispersion relation for discrete Schr&ouml;dinger operators with
+      generic 
+      parameters on various periodic graphs, with the goal of better understanding the geometry of critical points of the Bloch variety.
+      In pursuit of this goal we study various invariants of the dispersion relation; such as Newton polytope, singular and degenerate loci,
+      and the singular loci of its facial systems.
+      Our investigations were carried out using Macaulay2 and the Texas A&amp;M Mathematics department's computational cluster, Whistler,
+      enabling us to harvest data for all small graphs with various fixed supports.
+      We present various phenomena observed in this study as well as several conjectures arising from these observations.
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
@@ -132,10 +182,17 @@
  <!---------------------------------------------------------------------------------------------------------------------->
   <tr>
     <td><A NAME="GFR"><font size=+1>Filip Rupniewski</font></td><td>&nbsp;</td>
-    <td>Generic border subrank is bigger than generic subrank for large tensors</td>
+    <td>Relation between subrank and border subrank</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
   <tr><td colspan=3> <b>Abstract:</b>
+      To measure tensor complexity, multiple notions of ranks were introduced, such as tensor rank and subrank.
+      Tensors with a high value (subrank) and low cost (tensor rank) are very desirable.
+      They are used (in laser method) to construct the fastest algorithms for matrix multiplication.
+      The poster discusses the relationship between subrank and its border version, as well as their various properties such as the
+      non-additivity of (border) subrank and the growth rate of generic (border) subrank. 
+      Based on the joint work with Benjamin Biaggi, Chia-Yu Chang and Jan Draisma
+      (<a href="https://arxiv.org/abs/2402.10674">https://arxiv.org/abs/2402.10674</a>).
    </td>
    </tr>
   <!---------------------------------------------------------------------------------------------------------------------->
